...
              bottomLine="Near You"
              testID="premium-feature-near"
            />
            <View style={styles.featureDivider} />
            <PremiumFeatureBadge
              icon="flash"
              topLine="Book"
              bottomLine="Instantly"
              testID="premium-feature-instant"
            />
            <View style={styles.featureDivider} />
            <PremiumFeatureBadge
              icon="shield-checkmark"
...
